--- a/index.css
+++ b/index.css
@@ -56,6 +56,7 @@
     .FormSection{
         border: solid 1px var(--darkgray);
         border-bottom: 0;
+        transition: all 150ms ease;
     }
     .FormSection p{
         font-weight: 700;
