mostly done images changes

--- a/index.css
+++ b/index.css
@@ -139,9 +139,16 @@
 }
 .ImageHalf img
 {
+
 }
 
 
+.ImageContainer
+{
+    position: sticky;
+    top: 1.5rem;
+    width: 100%;
+}
 .ImageBoxFront, .ImageBoxBack
 {
     width: 100%;
