--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 /*#region General styles and links*/
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');    
     :root{
-        --darkergray: #3f3f3f;
+        --darkergray: rgb(93, 93, 93);
         --darkgray: #525353;
         --normalgray: #8d8d8d;
         --lightgray: #b2b2b2;
@@ -9,9 +9,12 @@
         --bordergray: #d9d9d9;
         --lightestgray: #eeeeee;
 
-        --offwhite: #fdfdfd;
-        --grayblue:#60768b;
+        --offwhite: rgb(253, 253, 253);
         --darkgrayblue: rgba(195, 195, 212, 0.123);
+
+        --lightgrayblue: rgb(158, 173, 185);
+        --mediumgrayblue: rgb(96, 118, 138);
+        --darkgrayblue: rgb(46, 62, 76);
     }
     *{
         box-sizing: border-box;
@@ -48,7 +51,7 @@
 
 /*#region Form half*/
     .FormHeader{
-        background-color: var(--grayblue);
+        background-color: var(--mediumgrayblue);
         color: white;
         font-size: 1.6rem;
         font-weight: 500;
@@ -57,42 +60,66 @@
         border: solid 1px var(--darkgray);
         border-bottom: 0;
         transition: all 150ms ease;
+        background-color: var(--offwhite);
     }
-    .FormSection p{
+    .FormSection > p{
         font-weight: 700;
+        font-size: 20px;
+        color: var(--darkergray);
     }
     .FormSubsection{
         border: solid 1px var(--darkgray);
         border-top: 0;
         border-bottom: 0;
     }
-    .FormSubsection p{
+    .FormSubsection > p{
         font-weight: 500;
-        color: var(--normalgray);
+        font-size: 20px;
+        color: var(--darkergray);
     }
     .CheckboxDiv{
         background-color: #ffffff00;
         padding: 0.4rem 1rem;
         display: inline-block;
         cursor: pointer;
-        border: 1px solid var(--darkgray);
+        border: 1px solid var(--lightgrayblue);
         -webkit-touch-callout: none;
         -webkit-user-select: none;
         -khtml-user-select: none;
         -moz-user-select: none;
         -ms-user-select: none;
         user-select: none;
+        transition: all 200ms;
     }
     .CheckboxDiv p{
-        font-weight: 400;
+        font-weight: 500;
+        font-size: 14px;
+        color: var(--lightgrayblue);
+    }
+    .CheckboxDiv:hover{
+        background-color: var(--darkgrayblue) !important;
+        border: 1px solid var(--darkgrayblue) !important;
+    }
+    .CheckboxDiv:hover p{
+        color: white !important;
+        font-weight: 700 !important;
     }
     .FormSection input{
-        display: none
+        display: none;
     }
-    .FormSection input:checked + label > .CheckboxDiv{
-        background-color: var(--grayblue);
-        color: var(--offwhite);
+    .FormSection .TextInput{
+        border: 1px solid var(--lightgrayblue);
+        padding: 0.4rem 1rem;
+        font-size: 14px;
+        font-weight: 700;
+        width: 10rem;
+        color: var(--lightgrayblue);
     }
+    .FormSection .TextInput::placeholder{
+        color: var(--lightgrayblue);
+        font-weight: 500;
+    }
+
     .SendButton{
         font-size: 1rem;
         border: none;
@@ -137,12 +164,6 @@
 {
     background-color: white;
 }
-.ImageHalf img
-{
-
-}
-
-
 .ImageContainer
 {
     position: sticky;
@@ -158,8 +179,4 @@
 {
     width: 100%;
     position: absolute;
-}
-.BaseImage
-{
-    
 }
