--- a/index.css
+++ b/index.css
@@ -102,7 +102,8 @@
     }
     .CheckboxDiv:hover p{
         color: white !important;
-        font-weight: 700 !important;
+        text-shadow: 0px 0px 1px rgb(255, 255, 255) !important;
+        /*font-weight: 700 !important;*/
     }
     .FormSection input{
         display: none;
@@ -179,4 +180,27 @@
 {
     width: 100%;
     position: absolute;
+}
+
+.ColorOverlayDiv
+{
+    width: 100%;
+    position: absolute;
+    height: calc(100vh - 3rem);
+    display: flex;
+    align-items: center;
+    background-color: wheat;
+}
+.ColorOverlay
+{
+    max-width: 100%;
+    position: absolute;
+}
+
+.ColorCheckboxDiv
+{
+    width: 35.8px;
+    height: 35.8px;
+    background-position: center;
+    background-size: cover;
 }
