--- a/index.css
+++ b/index.css
@@ -105,6 +105,29 @@
         text-shadow: 0px 0px 1px rgb(255, 255, 255) !important;
         /*font-weight: 700 !important;*/
     }
+    .CheckboxDiv[data-checked="true"]
+    {
+        background-color: var(--mediumgrayblue);
+        border-color: var(--mediumgrayblue);
+    }
+    .CheckboxDiv[data-checked="true"] p
+    {
+        color: white;
+        text-shadow: 0px 0px 1px rgb(255, 255, 255);
+    }
+    .CheckboxDiv[data-checked="false"]
+    {
+        background-color: white;
+        border-color: var(--lightgrayblue);
+    }
+    .CheckboxDiv[data-checked="false"] p
+    {
+        color: var(--lightgrayblue);
+        text-shadow: 0px 0px 0px rgb(255, 255, 255);
+    }
+
+
+
     .FormSection input{
         display: none;
     }
@@ -112,9 +135,9 @@
         border: 1px solid var(--lightgrayblue);
         padding: 0.4rem 1rem;
         font-size: 14px;
-        font-weight: 700;
+        font-weight: 600;
         width: 10rem;
-        color: var(--lightgrayblue);
+        color: var(--mediumgrayblue);
     }
     .FormSection .TextInput::placeholder{
         color: var(--lightgrayblue);
@@ -124,39 +147,18 @@
     .SendButton{
         font-size: 1rem;
         border: none;
-        color: var(--grayblue);
+        color: var(--lightgrayblue);
+        font-weight: 500;
         background-color: white;
         padding: 0.8rem;
         padding-left: 2rem;
         padding-right: 2rem;
+        transition: all 150ms ease;
     }
-    .ColorCheckboxDiv1{
-        background-color: rgba(145, 167, 201, 0.808);
-        padding: 0.4rem 1rem;
-        display: inline-block;
-        cursor: pointer;
-    }
-    .ColorCheckboxDiv2{
-        background-color: rgb(87, 117, 161);
-        padding: 0.4rem 1rem;
-        display: inline-block;
-        cursor: pointer;
-    }
-    .ColorCheckboxDiv3{
-        background-color: rgb(61, 95, 61);
-        padding: 0.4rem 1rem;
-        display: inline-block;
-        cursor: pointer;
-    }
-    .ColorCheckboxDiv4{
-        background-color: rgb(0, 0, 0);
-        padding: 0.4rem 1rem;
-        display: inline-block;
-        cursor: pointer;
-    }
-    .Hidden{
-        display: none;
-        background-color: aqua;
+    .SendButton:hover
+    {
+        background-color: var(--darkgrayblue);
+        color: white;
     }
 /*#endregion*/
 
@@ -181,26 +183,20 @@
     width: 100%;
     position: absolute;
 }
-
-.ColorOverlayDiv
-{
-    width: 100%;
-    position: absolute;
-    height: calc(100vh - 3rem);
-    display: flex;
-    align-items: center;
-    background-color: wheat;
-}
-.ColorOverlay
-{
-    max-width: 100%;
-    position: absolute;
-}
-
 .ColorCheckboxDiv
 {
     width: 35.8px;
     height: 35.8px;
     background-position: center;
-    background-size: cover;
+    background-size: 30px 30px;
+    border-radius: 50%;
+    padding: 0;
+}
+.ColorCheckboxDiv img
+{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    margin: 2px;
+    border-radius: 50%;
 }
